# churn_predicitons

./: Dockerfile  predict.py  pyproject.toml  readme.md  train.py  web_service.py
